applications/vsmp-royalties/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vsmp-royalties
  namespace: applications
  labels:
    app.kubernetes.io/name: vsmp-royalties
    app.kubernetes.io/instance: vsmp-royalties
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vsmp-royalties
      app.kubernetes.io/instance: vsmp-royalties
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vsmp-royalties
        app.kubernetes.io/instance: vsmp-royalties
    spec:
      containers:
      - name: vsmp-royalties
        image: registry.lvs.me.uk/vsmp-royalties:1.0.49 # {"$imagepolicy": "flux-system:vsmp-royalties"}
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /up
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /up
            port: http
          initialDelaySeconds: 30
          periodSeconds: 30
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
