applications/vsmp-royalties/k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vsmp-royalties-worker
  namespace: applications
  labels:
    app.kubernetes.io/name: vsmp-royalties
    app.kubernetes.io/instance: vsmp-royalties
    app.kubernetes.io/component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: vsmp-royalties
      app.kubernetes.io/instance: vsmp-royalties
      app.kubernetes.io/component: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: vsmp-royalties
        app.kubernetes.io/instance: vsmp-royalties
        app.kubernetes.io/component: worker
    spec:
      containers:
      - name: vsmp-royalties-worker
        image: registry.lvs.me.uk/vsmp-royalties:1.0.49 # {"$imagepolicy": "flux-system:vsmp-royalties"}
        imagePullPolicy: Always
        command: ["bin/jobs"]
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
      terminationGracePeriodSeconds: 60
